force-app/main/default/objects/AutomationBypass__c/fields/OrgDomain__c.field-meta.xml
<CustomField>
    <fullName>OrgDomain__c</fullName>
    <label>Org Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>