force-app/main/default/objects/AutomationBypass__c/fields/SkipAccountApproval__c.field-meta.xml
<CustomField>
    <fullName>SkipAccountApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Account Approval</label>
    <type>Checkbox</type>
</CustomField>