force-app/main/default/objects/AutomationBypass__c/fields/SkipValidation__c.field-meta.xml
<CustomField>
    <fullName>SkipValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>